# air_core

./: README.md  README.rst  pyproject.toml
air_core/: air.py  air_settings.py  main.py
tests/: test_air_core.py
