[tool.poetry]
name = "air_core"
version = "0.1.0"
description = "Core libraries shared amongst the air project"
authors = ["roboto84 <7658704+roboto84@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
