[tool.poetry]
name = "air_core"
version = "0.1.0"
description = "Core libraries shared amongst the air project"
authors = ["roboto84 <7658704+roboto84@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
willow-core = {git = 'https://github.com/roboto84/willow_core.git', tag = 'v0.1.1'}

[tool.poetry.dev-dependencies]
pytest = '^7.2.0'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
